chore: add publishConfig and repository

--- a/.plop/plop-templates/component/package.json.hbs
+++ b/.plop/plop-templates/component/package.json.hbs
@@ -13,6 +13,14 @@
   "files": [
     "dist"
   ],
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/WuQiuYang/ohkit"
+  },
   "scripts": {
     "build": "npm run clean && microbundle --jsx React.createElement",
     "dev": "npm run watch",
