--- a/.plop/plop-templates/component/tsconfig.json.hbs
+++ b/.plop/plop-templates/component/tsconfig.json.hbs
@@ -1,5 +1,5 @@
 {
   "extends": "../tsconfig.json",
   "include": ["src"],
-  "exclude": ["dist", "node_modules"]
+  "exclude": ["**/__tests__/**", "dist", "node_modules"]
 }
