--- a/.plop/plop-templates/utils/package.json.hbs
+++ b/.plop/plop-templates/utils/package.json.hbs
@@ -11,7 +11,8 @@
   "module": "dist/index.module.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
