chore: update output dist path

--- a/.plop/plop-templates/component/README.md.hbs
+++ b/.plop/plop-templates/component/README.md.hbs
@@ -12,6 +12,7 @@ npm install @ohkit/{{name}}
 
 ```tsx
 import { {{properCase name}} } from '@ohkit/{{name}}';
+import '@ohkit/{{name}}/dist/index.css';
 
 function App() {
   return <{{properCase name}}>Content</{{properCase name}}>;
