feat: [comps] text-ellipsis 更新精准依赖 & plop comp 更新

--- a/.plop/plop-templates/component/package.json.hbs
+++ b/.plop/plop-templates/component/package.json.hbs
@@ -25,7 +25,7 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@ohkit/utils": "0.0.1-beta.0"
+    "@hokit/prefix-classname": "^0.0.3"
   },
   "devDependencies": {
   },
