--- a/.plop/plop-templates/component/src/index.tsx.hbs
+++ b/.plop/plop-templates/component/src/index.tsx.hbs
@@ -2,7 +2,7 @@ import React, {PropsWithChildren} from 'react';
 import {
   prefixClassname as p,
   classNames as cx,
-} from "@ohkit/utils";
+} from "@hokit/prefix-classname";
 
 import './style.scss';
 
