feat: [utils] add dom-helper pkg

--- a/.plop/plop-templates/utils/src/index.stories.tsx.hbs
+++ b/.plop/plop-templates/utils/src/index.stories.tsx.hbs
@@ -1,12 +1,12 @@
 import type { Meta, StoryObj } from '@storybook/react';
 // import {useState, useEffect} from 'react';
 
-import { {{properCase name}} } from './{{name}}';
+import { {{camelCase name}} } from './';
 
 interface {{properCase name}}Props {
     // todo add
 }
-const {{properCase name}}Demo = (props: Partial<{{properCase name}}Props>) => {
+const {{properCase name}}Demo = (props: {{properCase name}}Props) => {
   const {} = props;
   return <div>
     {{properCase name}}Demo
