--- a/.plop/plop-templates/component/package.json.hbs
+++ b/.plop/plop-templates/component/package.json.hbs
@@ -25,7 +25,7 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@hokit/prefix-classname": "^0.0.3"
+    "@ohkit/prefix-classname": "^0.0.3"
   },
   "devDependencies": {
   },
